1. Updated view resolver to use .jsp extension for views 2. Support for change language (internationalization)

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,1 +1,11 @@
 label.appname=JAVA BASE CODE BETA 1.0 
+
+label.home=Home
+label.profile=Profile
+label.messages=Messages
+label.gender=Gender
+label.male=Male
+label.female=Female
+label.save=Save
+label.searchbyuid=Search by User ID
+label.searchall=Search All
